<resources>
    <string name="app_name">Task</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet
    </string>
    <string name="fab">Floating Action Button</string>
    <string name="camera">Camera</string>
    <string name="images">Images</string>
    <string name="description">Retrieve multiple images from Gallery &amp; Camera and display them in a list.</string>
    <string name="video">Video</string>
    <string name="videoDescription">Retrieve multiple videos from Gallery &amp; Camera and display them in a list.</string>
    <string name="userInput">User Input</string>
    <string name="inputDescription">Take all the basic user details and save them.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">Gallery</string>
    <string name="todo">TODO</string>
    <string name="no_media_available">No media available!</string>
    <string name="fileName"><b>File Name:</b></string>
    <string name="fileSize"><b>File Size:</b></string>
    <string name="fileDate"><b>File Date:</b></string>
    <string name="fileType"><b>File Type:</b></string>
    <string name="details_of_inspected_items">Details of inspected items:</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="mobile">Mobile</string>
    <string name="location">Location</string>
    <string name="desc">Description</string>
    <string name="testFiled">Test Filed</string>
    <string name="date_hint">DD/MM/YYYY</string>


    <string-array name="locations">
        <item>Jaipur</item>
        <item>Delhi</item>
        <item>Bangalore</item>
        <item>Pune</item>
        <item>Gurgaon</item>
        <item>Noida</item>
    </string-array>
</resources>