<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.prashant.task.fragments.mediamodel.MediaModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMediaCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{(v)-> model.onItemClick.onClick(v,model.viewHolder, model.position)}"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/ivSelectedImage"
            setImage="@{model.uri}"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivSelectedImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/fileName+` `+model.fileName}"
                android:textSize="16sp"
                tools:text="@string/fileName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@{@string/fileSize+` `+model.fileSize}"
                android:textSize="16sp"
                tools:text="@string/fileSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@{@string/fileType+` `+model.fileType}"
                android:textSize="16sp"
                tools:text="@string/fileType" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/fileDate+` `+model.createdDate}"
                android:textSize="16sp"
                tools:text="@string/fileDate" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>